Separated project-section with dynamic data population, added header+footer nav buttons on /blog/[slug]

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/mdx": "^2.0.13",
+    "@types/prismjs": "^1.26.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
